--- a/kontakt.html
+++ b/kontakt.html
@@ -51,7 +51,7 @@
 
 <main class="container py-5">
     <h2 class="text-center text-success mb-4">Kontaktirajte Nas</h2>
-    <form class="contact-form" method="POST" action="mailto:hanasi.hodzic@email.com">
+    <form id="contactForm" class="contact-form" method="POST" action="mailto:hanasi.hodzic@email.com">
         <div class="mb-3">
             <label for="name" class="form-label">Ime:</label>
             <input type="text" id="name" name="name" class="form-control">
